# circuitSimulator

./: CMakeLists.txt  README.md  main.cpp  simAll.cpp  test_format_output.cpp  test_link_api.cpp
include/circuit/: circuit_simulator.h  cli.h
samples/: circle.txt  edge_cases.txt  error_recovery.txt  formatted_output.txt  group_number_formats.txt  series.txt
samples/linkPuzzle/: LKY_26-6-20  SHP_26-6-21  SHP_26-6-21_2  SHP_cube
src/: circuit_simulator.cpp  cli.cpp
